--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -56,6 +56,7 @@ vi:
             title:
               blank: "Vui lòng nhập tên khoá học"
             start_date: "Ngày bắt đầu phải nhỏ hơn ngày kết thúc và lớn hơn ngày hiện tại"
+            user_id: "Chỉ giáo viên mới được tạo khoá học"
         user:
           attributes:
             password_confirmation:
