update signup error message

--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -74,4 +74,4 @@ vi:
             password:
               too_short: "quá ngắn (Ít nhất 8 ký tự)"
             email:
-              taken: "Email này đã đăng ký với tài khoản khác"
+              taken: "này đã đăng ký với tài khoản khác"
