--- a/config/locales/bigbluebutton_rails.en.yml
+++ b/config/locales/bigbluebutton_rails.en.yml
@@ -10,7 +10,12 @@ en:
         format_type: Type
         length: Length
         url: URL
+      bigbluebutton_playback_type:
+        default: Default
+        name: Name
+        visible: Visible
       bigbluebutton_recording:
+        description: "Description"
         end_time: "End Time"
         meetingid: "Meeting ID"
         metadata: Metadata
@@ -19,9 +24,17 @@ en:
         recordid: "Record ID"
         room_id: "Room ID"
         server_id: "Server ID"
+        size: "Size"
         start_time: "Start Time"
       bigbluebutton_room:
-        attendee_password: "Attendee Password"
+        allow_start_stop_recording: "Allow users to start/stop recording"
+        attendee_api_password: "Internal API key for attendees"
+        attendee_key: "Key for attendees"
+        auto_start_video: "Auto start video"
+        auto_start_audio: "Auto start audio"
+        auto_start_recording: "Auto start recording"
+        background: "Background image"
+        default_layout: "Default Layout"
         dial_number: "Dial Number"
         duration: Duration
         external: "Externally Created"
@@ -29,32 +42,72 @@ en:
         max_participants: "Maximum Number of Participants"
         meetingid: "Meeting ID"
         metadata: Metadata
-        moderator_password: "Moderator Password"
+        moderator_api_password: "Internal API key for moderators"
+        moderator_key: "Key for moderators"
+        moderator_only_message: "Message to be shown to moderators only"
         name: Name
-        param: "String ID"
         private: Private
+        presenter_share_only: "Only presenter shares audio and video"
         record: Record
-        server_id: "Server ID"
+        slug: "String ID"
         voice_bridge: "Voice Bridge"
         welcome_msg: "Welcome Message"
       bigbluebutton_server:
         name: Name
-        param: "String ID"
-        salt: "Security Salt"
+        secret: "Shared Secret"
+        slug: "String ID"
         url: URL
         version: Version
+      bigbluebutton_server_config:
+        available_layouts: "Available layouts"
     models:
-      bigbluebutton_metadata: "BigBlueButton Recording Metadata"
-      bigbluebutton_playback_format: "BigBlueButton Recording Playback Format"
-      bigbluebutton_recording: "BigBlueButton Recording"
-      bigbluebutton_room: "BigBlueButton Room"
-      bigbluebutton_server: "BigBlueButton Server"
+      bigbluebutton_metadata: "Web Conference Recording Metadata"
+      bigbluebutton_playback_format: "Web Conference Recording Playback Format"
+      bigbluebutton_recording: "Web Conference Recording"
+      bigbluebutton_room: "Web Conference Room"
+      bigbluebutton_server: "Web Conference Server"
+      bigbluebutton_server_config: "Web Conference Server Configurations"
   bigbluebutton_rails:
+    api:
+      errors:
+        forbidden:
+          msg: "You are not authorized to make this API call"
+          title: "Forbidden"
+        invalid_pagination:
+          msg: "One or more pagination parameters are wrong"
+          title: "Invalid pagination parameters"
+        invalid_key:
+          msg: "The key informed is not valid for this room"
+          title: "Invalid key"
+        missing_params:
+          msg: "You did not inform one or more required parameters"
+          title: "Missing parameters"
+        room_not_found:
+          msg: "Could not find the target room"
+          title: "Resource not found"
+        room_not_running:
+          msg: "There's no meeting currently running in this room"
+          title: "Meeting not running"
     bigbluebutton: BigBlueButton
     metadata:
       errors:
         name_format: "can only use letters, numbers and the symbols \"-\" or \"_\", but only letters at the beginning"
+    playback_types:
+      notice:
+        update:
+          success: "The playback type was successfully updated."
+      presentation:
+        name: "Play"
+        tip: "Plays the recording in an HTML5 page. The recording is not downloaded to your computer and will require Internet to be reproduced."
+      presentation_export:
+        name: "Download HTML"
+        tip: "Downloads an HTML page that you can use to reproduce the recording offline using your browser. Has all the features of the HTML player online plus the advantage of also working offline. Currently can only be reproduced using the Firefox browser."
+      presentation_video:
+        name: "Download"
+        tip: "Downloads a vídeo file (uses the WebM format) with the recording. You can use this video file to watch the recording offline and to share this recording in other websites."
     recordings:
+      default:
+        description: "Meeting held on %{time} (UTC)"
       errors:
         check_for_server:
           no_server: "There's no server associated with this recording."
@@ -71,19 +124,21 @@ en:
         update:
           success: "Your recording was successfully updated."
     rooms:
+      default_welcome_msg: "Welcome to <b>%%CONFNAME%%</b>!<br><br>To join the audio bridge click the headset icon (upper-left hand corner). Use a headset to avoid causing background noise for others.<br>"
+      default_welcome_msg_dial_number: "<br>You can call into this conference with a regular phone using the number \"%%DIALNUM%%\".<br>"
       errors:
-        auth:
+        fetch_recordings:
+          no_server: "There's no server associated with this room."
+        join:
           cannot_create: "You don't have permissions to start this meeting."
           failure: "Authentication failure."
           not_running: "The meeting is not running. You must wait for a moderator to join."
           wrong_params: "Wrong params in your request."
-        external:
-          blank_meetingid: "You must specify the meetingid of the meeting you want to join"
-        fetch_recordings:
-          no_server: "There's no server associated with this room."
-        param_format: "can only use letters, numbers and the symbols \"-\" or \"_\" (not at the begin or end)"
+        generate_dial_number:
+          not_unique: "We're sorry, but it wasn't possible to generate a unique dial number for this room. You can either try again or manually set a dial number."
         server:
           nil: "Your room must be associated to a server to execute this operation."
+        slug_format: "can only use letters, numbers and the symbols \"-\" or \"_\" (not at the begin or end)"
       notice:
         create:
           failure: "Your room could not be created."
@@ -96,12 +151,14 @@ en:
           success: "The meeting was successfully ended."
         fetch_recordings:
           success: "The list of recordings for this room was successfully updated."
+        generate_dial_number:
+          success: "A unique dial number was generated and saved."
         update:
           failure: "Your room could not be updated."
           success: "Your room was successfully updated."
     servers:
       errors:
-        param_format: "you can only use letters, numbers and the symbols \"-\" or \"_\" (not at the begin or end)"
+        slug_format: "you can only use letters, numbers and the symbols \"-\" or \"_\" (not at the begin or end)"
         url_format: "should use the pattern http://<server>/bigbluebutton/api"
       notice:
         create:
@@ -114,3 +171,11 @@ en:
           success: "Your recordings were successfully unpublished."
         update:
           success: "Your server was successfully updated."
+    server_configs:
+      layouts:
+        defaultlayout: "Default Layout"
+        lecture: "Lecture"
+        lectureassistant: "Lecture Assistant"
+        presentfocus: "Webinar"
+        videochat: "Video Chat"
+        webcamsfocus: "Meeting"
