--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -70,7 +70,9 @@ vi:
             balance: "Số dư tài khoản phải lớn hơn 0"
         participation:
           attributes:
-            user_id: "Bạn không thể đăng ký khoá học của mình"
+            user_id:
+              taken: 'Bạn đã đăng ký khoá học'
+              owner: "Bạn không thể đăng ký khoá học của mình"
             course_id: "Bạn không có đủ tiền trong tài khoản để đăng ký khoá học này"
         tutor_education:
           attributes:
