--- a/config/locales/vi.yml
+++ b/config/locales/vi.yml
@@ -52,7 +52,7 @@ vi:
         ativation_guide_message: "Để xác nhận tài khoản xin click vào nút phía dưới."
         teacher_guide_title: "2. Hoàn thiện hồ sơ cá nhân."
         teacher_guide_message: "Tài Coursedy chúng tôi luôn đặt chất lượng khoá học là quan trọng nhất. Do vậy, để đảm bảo chât lượng khoá học, chúng tôi cần bạn cung cấp một số thông tin cá nhân cũng như trình độ học vấn và lịch sử giảng dạy. Coursedy xin cảm ơn vì sự hợp tác này."
-        teacher_guide_button: "hoàn thiện hồ sơ"
+        teacher_guide_button: "Hoàn thiện hồ sơ"
         footer:
           question: "Giải quyết thắc mắc"
           policy: "Chính sách"
